--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,12 @@
 <div class="col-md-12">
   <div class="row box">
     <div class="box-inner col-md-6 col-md-offset-3">
-      <h1 class="title">18K Offer</h1>
-      <p class="slogan">18K Offer 是一个提供18K薪水工作机会的求职网站。
+      <h1 class="title">电竞 Offer</h1>
+      <p class="slogan">电竞 Offer 是一个提供游戏类，电竞向的求职网站。
         <br>
-        我们希望借由这个网站，能让大家找到且应征上高薪且优质的工作。
+        我们希望借由这个网站，推动电竞事业的发展，为电竞输送人才。
         <br>
-        凭借自己的努力和天份也会变 Winner
+        电竞不再是梦，是实打实的生活。
       </p>
       <p class="lead">
         <%= link_to '马上应征', jobs_path, class: 'btn btn-danger' %>
@@ -21,8 +21,8 @@
       <div class="col-lg-5 col-sm-6">
         <hr class="section-heading-spacer">
         <div class="clearfix"></div>
-        <h2 class="section-heading">找工作一定要带手机</h2>
-        <p class="lead">因为没带手机就不能联络公司</p>
+        <h2 class="section-heading">小时候我们有游戏陪伴</h2>
+        <p class="lead">长大后我们希望游戏陪伴更多人</p>
       </div>
       <div class="col-lg-5 col-lg-offset-2 col-sm-6">
         <%= image_tag 'pic-1.jpg', class: 'img-responsive' %>
@@ -37,8 +37,8 @@
       <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
         <hr class="section-heading-spacer">
         <div class="clearfix"></div>
-        <h2 class="section-heading">一定要把履历写好在投</h2>
-        <p class="lead">履历如果不会写就一定要多上网寻求帮助，例如  <a target="_blank" href="http://blog.niclin.tw">Nic 的 Blog</a>! 啦啦啦啦啦啦啦</p>
+        <h2 class="section-heading">电子竞技，源于现实而高于现实</h2>
+        <p class="lead">是竞技在互联网时代的又一种表现方式 <a target="_blank" href="http://lpl.qq.com/es/lpl/">观看电子竞技视频</a></p>
       </div>
       <div class="col-lg-5 col-sm-pull-6  col-sm-6">
         <%= image_tag 'pic-2.jpg', class: 'img-responsive' %>
@@ -53,8 +53,8 @@
       <div class="col-lg-5 col-sm-6">
         <hr class="section-heading-spacer">
         <div class="clearfix"></div>
-        <h2 class="section-heading">这是可以乱改的字<br>动手试试看吧</h2>
-        <p class="lead">摩改大赛可以参考<a target="_blank" href="https://forum.qzy.camp/">论坛资源</a></p>
+        <h2 class="section-heading">电竞赛事的前前后后<br>有你参与会更加精彩</h2>
+        <p class="lead">各赛事论坛<a target="_blank" href="http://bbs.lol.qq.com/forum.php">详情</a></p>
       </div>
       <div class="col-lg-5 col-lg-offset-2 col-sm-6">
         <%= image_tag 'pic-3.jpg', class: 'img-responsive' %>
