--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -1,3 +1,8 @@
+<div class="pull-right">
+  <%= link_to("Add a job", new_admin_job_path, :class => "btn btn-default" ) %>
+</div>
+
+<br><br>
 <table class="table table-boldered table-striped custab" >
     <thead>
         <tr>
