--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -79,7 +79,7 @@
     margin-bottom: 50px;
 
     .box-inner {
-        background-color: rgba(250, 250, 250, 0.69);
+        background-color: rgba(250, 250, 250, 0.1);
         padding-bottom: 5px;
         margin-top: 150px;
         margin-bottom: 150px;
@@ -159,6 +159,9 @@ footer .footer-below {
   box-shadow: 3px 3px 0px transparent;
   transition: 0.5s;
 }
+html { height: 100%;}
+  body { min-height: 100%; display: flex; flex-direction: column;}
+  .content { flex: 1;}
 
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 
