--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -8,10 +8,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-
         <% if !current_user %>
-          <li><a href="#" data-toggle="modal" data-target="#signup-modal">注册</a></li>
-          <li><a href="#" data-toggle="modal" data-target="#login-modal">登入</a></li>
+        <li><a href="#" data-toggle="modal" data-target="#signup-modal">注册</a></li>
+        <li><a href="#" data-toggle="modal" data-target="#login-modal">登入</a></li>
                  <% else %>
                    <li class="dropdown">
                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -28,45 +27,19 @@
             <% end %>
 
       </ul>
+      <%= form_tag search_jobs_path, :method => :get,class: "navbar-form navbar-right" do %>
+                        <div class="input-group search-box">
+                          <input type="text" class="form-control" name="keyword" placeholder="搜索职位、公司或地点" value="<%= params[:keyword] %>">
+                          <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit">
+                              <i class="fa fa-search"></i>
+                            </button>
+                          </div>
+                        </div>
+                        <% end %>
+
     </div>
     <!-- /.navbar-collapse -->
   </div>
   <!-- /.container-fluid -->
 </nav>
-
-<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
-  <div class="modal-dialog" role="document">
-    <div class="loginmodal-container">
-       <h2>Log in</h2>
-       <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
-         <div class="form-inputs">
-           <%= f.input :email, required: false, autofocus: true %>
-           <%= f.input :password, required: false %>
-           <%= f.input :remember_me, as: :boolean if devise_mapping.rememberable? %>
-         </div>
-         <div class="form-actions">
-           <%= f.button :submit, "Log in" %>
-         </div>
-       <% end %>
-    </div>
-  </div>
-</div>
-
-<div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
-  <div class="modal-dialog">
-    <div class="loginmodal-container">
-      <h2>Sign up</h2>
-        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= f.error_notification %>
-        <div class="form-inputs">
-          <%= f.input :email, required: true, autofocus: true %>
-          <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-          <%= f.input :password_confirmation, required: true %>
-        </div>
-        <div class="form-actions">
-            <%= f.button :submit, "Sign up" %>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
