--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -9,10 +9,10 @@
     </head>
 
     <body>
-
+      <div class="content">
         <div class="container-fluid">
-            <%= render "common/navbar" %>
             <div class="row">
+              <%= render "common/navbar" %>
               <div class="col-md-2">
                 <ul class="nav nav-pills nav-stacked" style="max-width: 300px; padding-top:20px;">
                   <li class="active"><%= link_to("Jobs", admin_jobs_path ) %> </li>
@@ -24,7 +24,7 @@
               </div>
             </div>
          </div>
-
+       </div>
         <%= render "common/footer" %>
 
     </body>
