--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,14 @@
   </head>
 
   <body>
+  <div class="content">
     <div class="container-fluid">
       <div class="row">
           <%= render "common/navbar" %>
           <%= yield %>
       </div>
     </div>
+  </div>
     <%= render "common/footer" %>
   </body>
 </html>
