--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
         电竞不再是梦，是实打实的生活。
       </p>
       <p class="lead">
-        <%= link_to '马上应征', jobs_path, class: 'btn btn-danger' %>
+        <%= link_to 'Join now !', jobs_path, class: 'btn btn-danger' %>
       </p>
     </div>
   </div>
