--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -87,14 +87,17 @@
 
     .title {
         text-align: center;
+        font-family: "微軟正黑體", PT Mono;
+        font-size: 5.5em;
         margin-bottom: 80px;
     }
 
     .slogan {
-        color: #222;
+        color: #1E88E5;
         margin-top: 10px;
         margin-bottom: 50px;
         text-align: center;
+        font-family: PT Mono;
         font-size: 25px;
         top: 12px;
     }
@@ -102,6 +105,7 @@
     .lead {
         margin-bottom: 60px;
         text-align: center;
+        font-family: PT Mono;
         color: white;
     }
 }
