--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,6 @@
 .navbar-default {
     background-color: #212121;
     border-color: #212121;
-    margin-bottom: 0;
     border-radius: 0;
 }
 
@@ -77,6 +76,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     margin-bottom: 50px;
+    margin-top: -20px;
 
     .box-inner {
         background-color: rgba(250, 250, 250, 0.1);
@@ -166,6 +166,12 @@ footer .footer-below {
 html { height: 100%;}
   body { min-height: 100%; display: flex; flex-direction: column;}
   .content { flex: 1;}
+
+  //---------common---------
+  .col-centered{
+    float: none;
+    margin: 0 auto;
+  }
 
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 
