--- a/app/views/admin/jobs/new.html.erb
+++ b/app/views/admin/jobs/new.html.erb
@@ -1,12 +1,14 @@
-<h1> Add a job </h1>
-
-<%= simple_form_for [:admin,@job] do |f| %>
-
-<%= f.input :title %>
-<%= f.input :description %>
-<%= f.input :wage_lower_bound, :label => "薪资下限" %>
-<%= f.input :wage_upper_bound, :label => "薪资上限" %>
-<%= f.input :contact_email %>
-<%= f.input :is_hidden %>
-  <%= f.submit "Submit" %>
-<% end %>
+<div class="panel panel-info">
+  <div class="panel-heading"><h1> Add a job </h1></div>
+  <div class="panel-body">
+    <%= simple_form_for [:admin,@job] do |f| %>
+    <%= f.input :title %>
+    <%= f.input :description %>
+    <%= f.input :wage_lower_bound, :label => "薪资下限" %>
+    <%= f.input :wage_upper_bound, :label => "薪资上限" %>
+    <%= f.input :contact_email %>
+    <%= f.input :is_hidden %>
+      <%= f.submit "Submit", class:'btn btn-success'%>
+    <% end %>
+  </div>
+</div>
