--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -7,8 +7,14 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li>
+          <div class="form-group form-inline search-bar">
+            <%= render :partial => "jobs/search_bar" %>
+          </div>
+        </li>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
-
         <% if !current_user %>
         <li><a href="#" data-toggle="modal" data-target="#signup-modal">注册</a></li>
         <li><a href="#" data-toggle="modal" data-target="#login-modal">登入</a></li>
@@ -27,7 +33,7 @@
                    </li>
             <% end %>
 
-      </ul>
+        </ul>
     </div>
     <!-- /.navbar-collapse -->
   </div>
