--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,6 +68,16 @@
     width: 32px; //定制图片宽度
     height: 32px; //定制图片高度
 }
+.form-group {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+.input-group {
+    position: relative;
+    display: table;
+    border-collapse: separate;
+    width: 250px; //加上width
+}
 
 //---------Box---------
 
