--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,9 @@
 <footer class="text-center">
   <div class="footer-below">
-      <p class="text-center">Copyright ©2016 Rails101
+      <p class="text-center">
+          Copyright ©2016 Rails101
+        </br>
+
           <br>Design by Xiaohuiwu
       </p>
   </div>
