--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -32,6 +32,8 @@
                       职缺</td>
                   <td>薪资下限</td>
                   <td>薪资上限</td>
+                  <td>公司名称</td>
+                  <td>公司地址</td>
                   <td>刊登时间</td>
               </tr>
           </thead>
@@ -46,6 +48,12 @@
                   </td>
                   <td>
                       <%= job.wage_upper_bound %>
+                  </td>
+                  <td>
+                    <%= job.company %>
+                  </td>
+                  <td>
+                    <%= job.city %>
                   </td>
                   <td>
                       <%= job.created_at %>
